--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -31,6 +31,7 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    max-width: 70%
 }
 div.highlight-default pre {
     background-color: rgb(255, 255, 255);
