--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -43,3 +43,11 @@ div.sphinxsidebar {
     height: auto;
 }
 }
+div.body h1 {
+  padding-bottom: 4px;
+  border-bottom: 1px solid rgb(62, 67, 73);
+}
+div.body h2 {
+  padding-bottom: 4px;
+  border-bottom: 1px solid rgb(62, 67, 73);
+}
